--- a/build2/webapp/src/template/instagram.html
+++ b/build2/webapp/src/template/instagram.html
@@ -1,7 +1,7 @@
 <div class="ig-header">
     <h1>TWEEDS-TAGRAMS</h1>
     <hr>
-    <h2>@TWEEDS</h2>
+    <h2>@TWEEDS_</h2>
 </div>
 
 <div class="photos">
