--- a/build2/sass/_nav.scss
+++ b/build2/sass/_nav.scss
@@ -25,11 +25,13 @@ $boxes:2;
 		.logo-text{
 			margin:65px auto;
 			width:634px;
+			padding-left:90px;
 		}
 		.nav-buttons{
 			margin:0 auto;
 			width:585px;
 			display:block;
+			padding-left:90px;
 			> ul {
 				list-display-type:none;
 				margin:0;
@@ -69,7 +71,7 @@ $boxes:2;
 
 		@media screen and (max-width: $bp-medium-nav) {
 			.logo-text{
-				padding:0 25px 0 25px;
+				padding:0 25px 0 90px;
 				width:50%;
 			}
 			.nav-buttons{
@@ -77,7 +79,7 @@ $boxes:2;
 					width: 100%;
 					position: absolute;
 					left: 50%;
-					margin-left: -110px;
+					margin-left: -70px;
 					li{
 						a{
 							display:block;
@@ -94,7 +96,7 @@ $boxes:2;
 				.social-buttons{
 					position: absolute;
 					left: 50%;
-					margin-left: -18px;
+					margin-left: 20px;
 					bottom: 40px;
 				}
 			}
@@ -122,6 +124,7 @@ $boxes:2;
 				}
 			}
 			#nav-arrow{
+				margin-top: -1px;
 				.arrow{
 					display:block;
 					margin: 19px 0 0 23px;
@@ -180,6 +183,14 @@ $boxes:2;
 			}
 			.boxes{
 				display:none;
+			}
+			.nav-buttons{
+				> ul{
+					margin-left: -110px;
+				}
+				.social-buttons{
+					margin-left: -18px;
+				}
 			}
 		}
 		&.closed{
