--- a/build2/sass/sections/_youngbuff.scss
+++ b/build2/sass/sections/_youngbuff.scss
@@ -1,3 +1,4 @@
+$triangleHeightEM: 284em;
 $triangleHeight: 5000px;
 $slope: 1.736111;
 $triangleWidth: $triangleHeight / $slope;
@@ -60,13 +61,13 @@ $triangleWidth: $triangleHeight / $slope;
             .left-tri{
                 width: 0;
                 height: 0;
-                border-top: $triangleHeight solid $young-buffalo-bg;
+                border-top: $triangleHeightEM solid $young-buffalo-bg;
                 border-left: $triangleWidth solid transparent;
             }
             .right-tri{
                 width: 0;
                 height: 0;
-                border-top: $triangleHeight solid $young-buffalo-bg;
+                border-top: $triangleHeightEM solid $young-buffalo-bg;
                 border-right: $triangleWidth solid transparent;
             }
         }
