--- a/build2/webapp/src/template/product-detail.html
+++ b/build2/webapp/src/template/product-detail.html
@@ -8,7 +8,7 @@
         <div class="left-col">
             <h1 class="product-title">{{capitalize product.title}}</h1>
             <p class="product-description">{{capitalize product.desc}}</p>
-            <!-- <a href="{{product.buyLink}}" target="_blank" class="buy-now white-circle"><span class="label">BUY NOW</span></a> -->
+            <a href="{{product.buyLink}}" target="_blank" class="buy-now white-circle"><span class="label">BUY NOW</span></a>
         </div>
         <div class="product-shot">
             <img class="front" src="{{product.imgLargeFront}}"/>
