video, lookbook image cropping
Signed-off-by: Nick Jonas <njonas45@gmail.com>

--- a/build2/sass/sections/_buy.scss
+++ b/build2/sass/sections/_buy.scss
@@ -20,6 +20,7 @@ section.buy{
             padding:204px 0 32px 0;
         }
         .store-container{
+            display:none;
             position:absolute;
             left:50%;
             .store-btn{
